# make_a_game

./: README  configure.ac
src/: Makefile.am  main.cc
src/2d_engine/: Makefile.am  game.cc  game.h  main.cc
src/2d_engine_textures/: Makefile.am  components.h  ecs.h  game.cc  game.h  game_object.cc  game_object.h  main.cc  map.cc  map.h  texture_manager.cc  texture_manager.h  vector2d.cc  vector2d.h
src/2d_engine_textures/assets/: player.xcf  player2.xcf
src/2d_engine_textures/ecs/: components.h  ecs.h  position_component.h  sprite_component.h  transform_component.h
